# xws

./: CONTRIBUTING.md  Cargo.toml  LICENSE  README.md
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md
.github/workflows/: code-coverage.yml  release.yml  rust.yml
.samoyed/: pre-commit
docs/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  LANGUAGE_SUPPORT.md  benchmarks.rd  configuration.md  index.md  llms.txt
