[package]
name = "xws"
version = "0.1.0"
edition = "2021"
authors = ["Rogerio Araújo <rogerio.araujo@gmail.com>"]
repository = "https://github.com/ararog/xws"
homepage = "https://github.com/ararog/xws"
description = "eXtensibe Web Server"
readme = "README.md"
license = "MIT"
keywords = ["http", "networking", "server", "rest-server"]
publish = true
rust-version = "1.75.0"

[dependencies]
compio = "0.18.0"
compio-macros = "0.1.2"
cyper-core = "0.8.0"
